--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
   "scripts": {
     "build": "node build.js modules=ALL requirejs exclude=gestures,accessors,erasing",
     "build:fast": "node build.js modules=ALL requirejs fast exclude=gestures,accessors,erasing",
-    "build:watch": "onchange 'src/**/**' 'HEADER.js' 'lib/**/**' -- npm run build_export",
+    "build:watch-org": "onchange 'src/**/**' 'HEADER.js' 'lib/**/**' -- npm run build_export",
+    "build:watch": "onchange 'src/**/**' 'HEADER.js' 'lib/**/**' -- npm run build:fast",
     "link:watch": "onchange 'src/**/**' 'HEADER.js' 'lib/**/**' -- npm link",
     "build_with_gestures": "node build.js modules=ALL exclude=accessors",
     "build_export": "npm run build:fast && npm run export_dist_to_site",
